--- a/package.json
+++ b/package.json
@@ -1,51 +1,44 @@
 {
-    "name": "client",
-    "version": "0.1.0",
-    "private": true,
+    "name": "financify",
+    "version": "1.0.0",
+    "description": "A personal finance application that integrates with Canadian banks.",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server",
+        "server": "nodemon server",
+        "client": "npm start --prefix client",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
+    },
+    "author": "Jacob Godin",
+    "license": "MIT",
     "dependencies": {
-        "@material-ui/icons": "^4.5.1",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.4.0",
-        "@testing-library/user-event": "^7.1.2",
+        "@material-ui/core": "^4.8.0",
         "axios": "^0.21.1",
-        "classnames": "^2.2.6",
-        "currency-symbol-map": "^4.0.4",
-        "history": "^4.10.1",
+        "bcryptjs": "^2.4.3",
+        "config": "^3.2.4",
+        "express": "^4.17.1",
+        "express-validator": "^6.3.0",
+        "gravatar": "^1.8.0",
         "http-proxy-middleware": "^0.20.0",
-        "jwt-decode": "^2.2.0",
-        "materialize-css": "^1.0.0-rc.2",
-        "react": "^16.12.0",
-        "react-dev-utils": "^10.0.0",
+        "is-empty": "^1.2.0",
+        "jsonwebtoken": "^8.5.1",
+        "logrocket": "^1.0.6",
+        "moment": "^2.24.0",
+        "mongoose": "^5.8.1",
+        "plaid": "^4.3.0",
         "react-dom": "^16.12.0",
-        "react-plaid-link-button": "0.0.4",
+        "react-moment": "^0.9.7",
         "react-redux": "^7.1.3",
         "react-router-dom": "^5.1.2",
-        "react-router-redux": "^4.0.8",
-        "react-scripts": "3.3.0",
+        "recharts": "^2.0.0-beta.1",
         "redux": "^4.0.4",
-        "redux-cache": "^0.3.0",
-        "redux-thunk": "^2.3.0"
+        "redux-devtools-extension": "^2.13.8",
+        "redux-thunk": "^2.3.0",
+        "request": "^2.88.0",
+        "tinycolor2": "^1.4.1"
     },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "proxy": "http://localhost:5000"
+    "devDependencies": {
+        "concurrently": "^5.0.1",
+        "nodemon": "^2.0.2"
+    }
 }
